second iteration of #gm-2804 - LinkedList removal